--- a/configs/elasticsearch/config.yml
+++ b/configs/elasticsearch/config.yml
@@ -1,5 +1,5 @@
 cluster.name: 'elk'
 network.host: ${HOST}
 
-xpack.security.enabled: true
+xpack.security.enabled: false
 xpack.license.self_generated.type: basic
